// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders an input default textarea 1`] = `
<div
  className="eui-text-field  "
>
  <div
    className="eui-text-field-wrapper"
  >
    <textarea
      aria-errormessage="undefinedErrorMessage"
      aria-invalid={false}
      className="custom-textarea"
      role="textbox"
    />
    <div
      className="eui-text-field-footer"
    >
      <span
        className="eui-text-field-message eui-text-field-error-message "
        id="undefinedErrorMessage"
        role="alert"
      />
      <span
        className="eui-text-field-message eui-text-field-help-text"
      />
    </div>
  </div>
  <label />
</div>
`;

exports[`TextArea renders textarea with data correctly 1`] = `
<div
  className="eui-text-field  "
>
  <div
    className="eui-text-field-wrapper"
  >
    <textarea
      aria-errormessage="undefinedErrorMessage"
      aria-invalid={false}
      aria-label="Message"
      className="custom-textarea"
      name="message"
      onChange={[Function]}
      role="textbox"
      rows="4"
      value=""
    />
    <div
      className="eui-text-field-footer"
    >
      <span
        className="eui-text-field-message eui-text-field-error-message "
        id="undefinedErrorMessage"
        role="alert"
      />
      <span
        className="eui-text-field-message eui-text-field-help-text"
      />
    </div>
  </div>
  <label>
    Message
  </label>
</div>
`;
